Another File handling

--- a/fblib/CMakeLists.txt
+++ b/fblib/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 
 Project(fblib)
 
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
 FILE(GLOB SOURCE *.cpp)
 
